Autocomplite for address

--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -14,6 +14,9 @@
     <script src="{% static 'app/scripts/jquery-ui.js' %}"></script>
     <script src="{% static 'app/scripts/bootstrap.js' %}"></script>
     <script src="{% static 'app/scripts/respond.js' %}"></script>
+
+    <script src="http://maps.googleapis.com/maps/api/js?sensor=false&amp;libraries=places"></script>
+    <script src="{% static 'app/scripts/jquery.geocomplete.js' %}"></script>
 </head>
 
 <body>
