--- a/app/templates/app/search_bar.html
+++ b/app/templates/app/search_bar.html
@@ -23,6 +23,21 @@
   <p>{{ location }}</p>
 {% endfor %}
 
+{% if form.errors %}
+    {% for field in form %}
+        {% for error in field.errors %}
+            <div class="alert alert-error">
+                <strong>{{ error }}</strong>
+            </div>
+        {% endfor %}
+    {% endfor %}
+    {% for error in form.non_field_errors %}
+        <div class="alert alert-error">
+            <strong>{{ error }}</strong>
+        </div>
+    {% endfor %}
+{% endif %}
+
 <script>
 
 function searchOpen() {
