Added filters and default value to distance

--- a/app/templates/app/search_bar.html
+++ b/app/templates/app/search_bar.html
@@ -21,6 +21,15 @@
     {{ form.year }}
     <label for="production_company">Production Company: </label>
     {{ form.production_company }}
+    <label for="production_company">Distributor: </label>
+    {{ form.distributor }}
+    <label for="production_company">Director: </label>
+    {{ form.director }}
+    <label for="production_company">Writer: </label>
+    {{ form.writer }}
+    <br>
+    <label for="production_company">Actor: </label>
+    {{ form.actor }}
     <input type="submit" value="Search">
 </form>
 
