Some changes on search settings

--- a/app/templates/app/search_bar.html
+++ b/app/templates/app/search_bar.html
@@ -21,14 +21,14 @@
     {{ form.year }}
     <label for="production_company">Production Company: </label>
     {{ form.production_company }}
-    <label for="production_company">Distributor: </label>
+    <label for="distributor">Distributor: </label>
     {{ form.distributor }}
-    <label for="production_company">Director: </label>
+    <label for="director">Director: </label>
     {{ form.director }}
-    <label for="production_company">Writer: </label>
+    <label for="writer">Writer: </label>
     {{ form.writer }}
     <br>
-    <label for="production_company">Actor: </label>
+    <label for="actor">Actor: </label>
     {{ form.actor }}
     <input type="submit" value="Search">
 </form>
